# Math-project-with-FastAPI

./: pyproject.toml
math_project/: app.py  functions.py  schemas.py
requests/: main.py
